cm4all-workshop (3.0.4) unstable; urgency=low

  * eliminate dependency on libevent

 --   

cm4all-workshop (3.0.3) unstable; urgency=low

  * config: allow host name in "pond_server" setting
  * systemd: depend on network-online.target

 -- Max Kellermann <mk@cm4all.com>  Fri, 01 Jun 2018 12:21:55 -0000

cm4all-workshop (3.0.2) unstable; urgency=low

  * pond: fix CRC errors due to stack corruption

 -- Max Kellermann <mk@cm4all.com>  Mon, 14 May 2018 14:48:15 -0000

cm4all-workshop (3.0.1) unstable; urgency=low

  * cron: setting "pond_server" sends job log messages to Pond server

 -- Max Kellermann <mk@cm4all.com>  Fri, 11 May 2018 17:55:54 -0000

cm4all-workshop (2.2) unstable; urgency=low

  * spawn: fix kernel warning "oom_adj is deprecated, please use
    oom_score_adj instead"
  * control: fix error "Short send"
  * config: require "allow_user" only if cron is enabled
  * debian: don't start daemon during initial installation

 -- Max Kellermann <mk@cm4all.com>  Fri, 11 May 2018 06:52:25 -0000

cm4all-workshop (2.1) unstable; urgency=low

  * feature freeze
  * migrate: add option "--set-role=ROLE"
  * spawn: fix resource limits problem with user namespaces
  * spawn: increase the OOM score of child processes

 -- Max Kellermann <mk@cm4all.com>  Tue, 23 Jan 2018 18:41:32 -0000

cm4all-workshop (2.0.37) unstable; urgency=low

  * migrate: revert changes with PostgreSQL 9.6 syntax
  * workshop: make database migration mandatory
  * workshop: add "env" column for environment variables
  * workshop: command "setenv" adds environment variables

 -- Max Kellermann <mk@cm4all.com>  Thu, 14 Dec 2017 15:59:47 -0000

cm4all-workshop (2.0.36) unstable; urgency=low

  * workshop: command "again" can be delayed
  * workshop: command "version" queries Workshop version number
  * workshop/plan: no boolean value after "control_channel"
  * workshop/plan: add options "umask", "private_network"

 -- Max Kellermann <mk@cm4all.com>  Tue, 12 Dec 2017 22:18:57 -0000
