@@ -1,0 +1,1 @@
+debian/build/cm4all-workshop-run-job usr/bin
